--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "author": "Mehrnaz Zand",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack --env",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json", 
-    "start": "node server/server.js", 
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
@@ -22,12 +21,8 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "0.28.4",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "jest": "20.0.4",
     "live-server": "^1.2.2",
     "moment": "2.18.1",
     "normalize.css": "7.0.0",
@@ -44,11 +39,16 @@
     "sass-loader": "7.3.1",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "3.1.0"
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "16.0.0",
+    "webpack-dev-server": "2.5.1"
   }
 }
